--- a/index.html
+++ b/index.html
@@ -7,18 +7,33 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular-sanitize.js"></script>
-    <script src="form_app.js"></script>
+    <!-- script src="javascripts/libs/angularjs/1.0.2/angular.js"></script>
+    <script src="javascripts/libs/angularjs/1.0.2/angular-sanitize.js"></script -->
+    <script src="javascripts/libs/angularjs/1.2.24/angular.min.js"></script>
+    <script src="javascripts/libs/angularjs/1.2.24/angular-sanitize.js"></script>
+    <script src="javascripts/ddt_demo_app.js"></script>
 
   </head>
-  <body>
+  <body ng-app="ddtApp">
 
-  <div data-driven-template > loading... </div>
+	<div ng-controller="demoCtrl" class="row">
+		<div class="col-md-5">
+			<div data-driven-template ng-repeat="item in content.items" content="item"></div>
+		</div>
+
+		<div  class="col-md-2">
+			<button ng-click="add_content()">add content</button>
+		</div>
+			
+		<div id="json_data_view" class="col-md-5"><pre ng-bind="stringify_content()"></pre></div>
+
+	</div>
 
   </body>
 </html>
