--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -20,17 +20,19 @@
   </head>
   <body ng-controller="demoCtrl">
 
-	<div class="button-bar row">
-		<div  class="col-md-12">
-			<button ng-click="add_content()" class="btn btn-success">add content</button>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6">
-			<div data-driven-template ng-repeat="item in content.items" content="item"></div>
-		</div>
-		<div id="json_data_view" class="col-md-6"><pre ng-bind="stringify_content()"></pre></div>
-	</div>
+    <div class="button-bar row">
+        <div  class="col-md-12"><em> Demo_2 </em> 
+            <button ng-click="add_content()" class="btn btn-success">add content</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div data-driven-template content="item" ng-repeat="item in content.items"></div>
+        </div>
+        <div id="json_data_view" class="col-md-6">
+            <pre ng-bind="stringify_content()"></pre>
+        </div>
+    </div>
 
   </body>
 </html>
