--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="ddtApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<link href="stylesheets/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheets/bootstrap.min.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,19 +18,21 @@
     <script src="javascripts/ddt_demo_app.js"></script>
 
   </head>
-  <body ng-app="ddtApp">
+  <body ng-controller="demoCtrl">
 
-	<div ng-controller="demoCtrl" class="row">
-		<div class="col-md-5">
-			<div data-driven-template ng-repeat="item in content.items" content="item"></div>
-		</div>
-
-		<div  class="col-md-2">
-			<button ng-click="add_content()">add content</button>
-		</div>
-			
-		<div id="json_data_view" class="col-md-5"><pre ng-bind="stringify_content()"></pre></div>
-	</div>
+    <div class="button-bar row">
+        <div  class="col-md-12"><em> Demo_3 </em> 
+            <button ng-click="add_content()" class="btn btn-success">add content</button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div data-driven-template content="item" ng-repeat="item in content.items"></div>
+        </div>
+        <div id="json_data_view" class="col-md-6">
+            <pre ng-bind="stringify_content()"></pre>
+        </div>
+    </div>
 
   </body>
 </html>
